--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ android {
 }
 
 dependencies {
+    implementation project(":advancedrecyclerview")
+    implementation project(":core")
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
