--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "RealTrack"
 include ':app'
+include ':advancedrecyclerview'
+include ':core'
